<resources>
    <string name="app_name">My Instagram App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Plus</string>

    <string name="title_plus">Plus</string>
    <string name="title_search">Search</string>
    <string name="title_like">Like</string>
    <string name="title_user">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>