<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_plus"
        android:icon="@drawable/plus"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/heart"
        android:icon="@drawable/heart"
        android:title="@string/title_like" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/user"
        android:title="@string/title_user" />

</menu>