<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myinstagramapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_like"
            app:destination="@id/navigation_like" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myinstagramapp.ui.search.SearchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_plus"
        android:name="com.example.myinstagramapp.ui.plus.PlusFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_plus" >
        <action
            android:id="@+id/action_navigation_plus_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_like"
        android:name="com.example.myinstagramapp.ui.like.LikeFragment"
        android:label=""
        tools:layout="@layout/fragment_like" >
        <action
            android:id="@+id/action_navigation_like_to_navigation_plus"
            app:destination="@id/navigation_plus" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.myinstagramapp.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>


</navigation>